# Shaed_control

./: .~lock.Instructions to run with real UR3 robot.doc#  Instructions to run with real UR3 robot.doc  Instructions to run with simulated UR3 robot.doc  README.md
bci_messages/: CMakeLists.txt  package.xml
bci_messages/msg/: object_state.msg
bci_robot_pkg/: CMakeLists.txt  package.xml
bci_robot_pkg/bci_gripper_control/: CMakeLists.txt  package.xml
bci_robot_pkg/bci_gripper_control/src/: bci_gripper_control.cpp  bci_gripper_control_test.cpp
bci_robot_pkg/bci_robot_control/: CMakeLists.txt  package.xml
bci_robot_pkg/bci_robot_control/launch/: bci_robot.launch  bci_robot_simulation.launch
bci_robot_pkg/bci_robot_control/src/: bci_robot_control.cpp
bci_user_pkg/: CMakeLists.txt  package.xml
bci_user_pkg/launch/: bci_user_pkg.launch
bci_user_pkg/scripts/: fake_bci_gui.py  object_recognition.py  pub_classes.py
bci_user_pkg/scripts/vision_recognition/: rs_cam.py
